[tool.poetry]
name = "pdf2md"
version = "0.1.0"
description = "Convert PDF to Markdown via OpenAI multi-modal text/vision model"
authors = ["Zachary Yocum <zachary.yocum@me.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.11.*"
backoff = "2.2.1"
openai = "1.35.10"
pdf2image = "1.17.0"
pillow = "10.4.0"
tqdm = "4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
